--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		</script>
     </head>
 
+
     <body class="no-loader">
     
     	<div class="loader">
@@ -1202,17 +1203,21 @@
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
-										<img class="background-image" alt="Elio Qoshi" src="img/ElioQoshi.jpg">
+										<img class="background-image" alt="Elio Quoshi" src="img/ElioQoshi.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/Ju_lea"><i class="icon social_twitter"></i></a>
-												<a target="default" href="https://de.linkedin.com/in/julea"><i class="icon social_linkedin"></i></a>
+												<a target="default" href="https://twitter.com/elioqoshi"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://al.linkedin.com/in/elioqoshi"><i class="icon social_linkedin"></i></a>
 											</div>
 										</div>
 									</div>
 								</div>
 		
-								
+								<div class="speaker-description">
+									<h2>Elio Qoshi<br></h2>
+									<span class="sub">Gründer Tirana Hackerspace Open Labs Albania</span>
+									<p>Für Elio "Sharing is caring". Er ist Entwickler, Designer und Mozilla Rep. Als Vorstandsmitglied engagiert er sich für den Tirana Hackerspace Open Labs Albania. Er die Infosite ura.al and gegründet und organisiert die Open Source-Konferenz Albanien.</p>
+								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
 							<div class="speaker-with-bio">
