--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 								<div class="speaker-description">
 									<h2>Jimmie P. Rodgers<br></h2>
 									<span class="sub"><span>Circuitbender</span></span>
-									<p>Jimmie is a a full time Hacker, Artist, Circuitbender in Somerville, MA. You can often find me at @artisansasylum.</p>
+									<p>Jimmie ist ein Vollzeit-Hacker, Künstler, Circuitbender aus Somerville, Massachusetts. Sein Spitzname ist artisansasylum.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -457,8 +457,8 @@
 		
 								<div class="speaker-description">
 									<h2>Mitch Altman<br></h2>
-									<span class="sub">Hardware Maker</span>
-									<p>Inventor of TV-B-Gone, Co-founder of Noisebridge (San Francisco hackerspace)</p>
+									<span class="sub">Open Hardware Maker</span>
+									<p>Erfinder von TV-B-Gone, Mitgründer des San Francisco Hackerspaces Noisebridge.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -979,6 +979,46 @@
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
+										<img class="background-image" alt="Rüdiger Trojok" src="img/RuedigerTrojok.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/Ju_lea"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/in/julea"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Rüdiger Trojok<br></h2>
+									<span class="sub">Open Biotech</span>
+									<p>Rüdiger studierte Systemische und Synthetische Biologie an der Universität Potsdam, in Freiburg und an der Technischen Universität Kopenhagen. Gegenwärtig baut er ein Bürger-Wissenschafts-Lab in Berlin und treibt die Open-Source-Biotechnologie in der Öffentlichkeit, Politik und Kunst voran.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Mirela Alistar" src="img/MirelaAristar.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/Ju_lea"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/in/julea"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Mirela Alistar<br></h2>
+									<span class="sub">Biochips &amp; Computer-Ingenieurin</span>
+									<p>Mirela wurde 1985 in Romänien geboren und hält einen Doktor als Computer-Ingenieur der TU Dänemark. Seit 2010 entwickelt sie computergestützte Systeme für microflüssige Biochips. Ihre Interessen sind ausserdem Embedded Systems. Sie unterstützt Open Access-Forschung und Wissensvermehrung.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
 										<img class="background-image" alt="Frederik Kramer" src="img/FrederikKramer.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
@@ -1013,6 +1053,46 @@
 									<h2>Schlomo Schapiro<br></h2>
 									<span class="sub">Systemarchitekt ImmobilienScout24</span>
 									<p>Shlomo arbeitet als Systemarchitekt und Open Source-Evangelist bei ImmobilienScout24. Die Plattform basiert auf Linux, Apache, Tomcat and offenen Standards. Schlomo betreut verschiedene Open Source-Projekte, er ist DevOps und schreibt regelmässig für deutsche IT-Magazine.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Great Doci" src="img/GreatDoci.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="http://twitter.com/GretaDoci"><i class="icon social_twitter"></i></a>
+												
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Great Doci<br></h2>
+									<span class="sub">Wikipedia Community</span>
+									<p>Greta studiert Informatik und arbeitet als Entwicklerin. Sie ist Mitglied des Hackerspaces Open Labs Albanien und eine Organisatorin der Open Source Conference Albania. Sie beschäftigt sich mit freiem Wissen in der Wikipedia. Sie liebt Wandern, Reisen und Schokolade :)</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Jos Poortvliet" src="img/JosPoortvliet.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/Ju_lea"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/in/julea"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Jos Poortvliet<br></h2>
+									<span class="sub">Evangelist Owncloud</span>
+									<p>Jos ist "People Person", Technologie-Enthusiast and Alles-Offen-Evangelist bei Owncloud. Er war Community-Manager bei SUSE und engagiert sich bei der KDE community. Er fährt lieber Fahrrad anstatt im Verkehr zu warten, wenn das Wetter gut ist. Er mag Kochen mit Freunden und Familie und mit seinem Hund spielen.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -1057,46 +1137,6 @@
 									<h2>Frank Hofmann<br></h2>
 									<span class="sub">lug.berlin</span>
 									<p>Frank ist Teil des Open-Source Experten-Netzwerks Büro 2.0 in Berlin und arbeitet als Dienstleister mit Spezialisierung auf Druck und Satz. Als Autor schreibt er für Linux Magazine und LinuxUser. Er gehört zu den Koordinatoren der Treffen über die Plattform lug.berlin.</p><div><br></div>
-								</div>
-							</div>
-						</div><div class="col-md-6 col-sm-12">
-							<div class="speaker-with-bio">
-								<div class="speaker">
-									<div class="image-holder">
-										<img class="background-image" alt="Jos Poortvliet" src="img/JosPoortvliet.jpg">
-										<div class="hover-state text-center preserve3d">
-											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/Ju_lea"><i class="icon social_twitter"></i></a>
-												<a target="default" href="https://de.linkedin.com/in/julea"><i class="icon social_linkedin"></i></a>
-											</div>
-										</div>
-									</div>
-								</div>
-		
-								<div class="speaker-description">
-									<h2>Jos Poortvliet<br></h2>
-									<span class="sub">Evangelist Owncloud</span>
-									<p>Jos ist "People Person", Technologie-Enthusiast and Alles-Offen-Evangelist bei Owncloud. Er war Community-Manager bei SUSE und engagiert sich bei der KDE community. Er fährt lieber Fahrrad anstatt im Verkehr zu warten, wenn das Wetter gut ist. Er mag Kochen mit Freunden und Familie und mit seinem Hund spielen.</p>
-								</div>
-							</div>
-						</div><div class="col-md-6 col-sm-12">
-							<div class="speaker-with-bio">
-								<div class="speaker">
-									<div class="image-holder">
-										<img class="background-image" alt="Greta Doci" src="img/GreatDoci.jpg">
-										<div class="hover-state text-center preserve3d">
-											<div class="social-links vertical-align">
-												<a target="default" href="http://twitter.com/GretaDoci"><i class="icon social_twitter"></i></a>
-												
-											</div>
-										</div>
-									</div>
-								</div>
-		
-								<div class="speaker-description">
-									<h2>Greta Doci<br></h2>
-									<span class="sub">Wikipedia Community</span>
-									<p><span>Greta studiert Informatik und arbeitet als Entwicklerin. Sie ist Mitglied des Hackerspaces Open Labs Albanien und eine Organisatorin der Open Source Conference Albania. Sie beschäftigt sich mit freiem Wissen in der Wikipedia. Sie liebt Wandern, Reisen und Schokolade :)</span> </p><div><br></div>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -1177,46 +1217,6 @@
 									<h2>Elio Qoshi<br></h2>
 									<span class="sub">Gründer Tirana Hackerspace Open Labs Albania</span>
 									<p>Für Elio "Sharing is caring". Er ist Entwickler, Designer und Mozilla Rep. Als Vorstandsmitglied engagiert er sich für den Tirana Hackerspace Open Labs Albania. Er die Infosite ura.al and gegründet und organisiert die Open Source-Konferenz Albanien.</p>
-								</div>
-							</div>
-						</div><div class="col-md-6 col-sm-12">
-							<div class="speaker-with-bio">
-								<div class="speaker">
-									<div class="image-holder">
-										<img class="background-image" alt="Rüdiger Trojok" src="img/RuedigerTrojok.jpg">
-										<div class="hover-state text-center preserve3d">
-											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/Ju_lea"><i class="icon social_twitter"></i></a>
-												<a target="default" href="https://de.linkedin.com/in/julea"><i class="icon social_linkedin"></i></a>
-											</div>
-										</div>
-									</div>
-								</div>
-		
-								<div class="speaker-description">
-									<h2>Rüdiger Trojok<br></h2>
-									<span class="sub">Open Biotech</span>
-									<p>Rüdiger studierte Systemische und Synthetische Biologie an der Universität Potsdam, in Freiburg und an der Technischen Universität Kopenhagen. Gegenwärtig baut er ein Bürger-Wissenschafts-Lab in Berlin und treibt die Open-Source-Biotechnologie in der Öffentlichkeit, Politik und Kunst voran.</p>
-								</div>
-							</div>
-						</div><div class="col-md-6 col-sm-12">
-							<div class="speaker-with-bio">
-								<div class="speaker">
-									<div class="image-holder">
-										<img class="background-image" alt="Mirela Alistar" src="img/MirelaAristar.jpg">
-										<div class="hover-state text-center preserve3d">
-											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/Ju_lea"><i class="icon social_twitter"></i></a>
-												<a target="default" href="https://de.linkedin.com/in/julea"><i class="icon social_linkedin"></i></a>
-											</div>
-										</div>
-									</div>
-								</div>
-		
-								<div class="speaker-description">
-									<h2>Mirela Alistar<br></h2>
-									<span class="sub">Biochips &amp; Computer-Ingenieurin</span>
-									<p>Mirela wurde 1985 in Romänien geboren und hält einen Doktor als Computer-Ingenieur der TU Dänemark. Seit 2010 entwickelt sie computergestützte Systeme für microflüssige Biochips. Ihre Interessen sind ausserdem Embedded Systems. Sie unterstützt Open Access-Forschung und Wissensvermehrung.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -1457,6 +1457,26 @@
 									<h2>William Ismael<br></h2>
 									<span class="sub">Installationen und Software-Entwickler</span>
 									<p>William schreibt Software und nutzt Sensoren, Kameras, Sound, Projectoren und baut Strukturen um immersive Performances und interaktive Audiovisuelle Installationen zu erschaffen.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Andrew Holway" src="img/AndrewHolway.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/otternetworks"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/in/andrewholway"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Andrew Holway<br></h2>
+									<span class="sub">Gründer Otter Networks and SELinux-Experte</span>
+									<p>Andrew hat Netzwerkarchitekturen für "High Performance Computing" (HPC) und Storage-Cluster am CERN aber auch für kommerzielle Clouds auf AWS entwickelt. Bei seiner Firma Otter Networks geht es darum Risiken in Cloudsystemen zu identifizieren und Lösungen zu entwickeln.&nbsp;</p>
 								</div>
 							</div>
 						</div></div>
