--- a/index.html
+++ b/index.html
@@ -1423,6 +1423,41 @@
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
+										<img class="background-image" alt="Volker Birk" src="img/VolkerBirk.jpg">
+										
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Volker Birk<br></h2>
+									<span class="sub">p≡p foundation</span>
+									<p>Volker ist ein Softwarearchitekt bekannt für sein Engagement im Chaos Computer Club Schweiz. Er ist Gründer und Hauptentwickler von p≡p mit einer Mission das Internet zurückzuerobern.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Andrew Holway" src="img/AndrewHolway.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/otternetworks"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/in/andrewholway"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Andrew Holway<br></h2>
+									<span class="sub">Gründer Otter Networks and SELinux-Experte</span>
+									<p>Andrew hat Netzwerkarchitekturen für "High Performance Computing" (HPC) und Storage-Cluster am CERN aber auch für kommerzielle Clouds auf AWS entwickelt. Bei seiner Firma Otter Networks geht es darum Risiken in Cloudsystemen zu identifizieren und Lösungen zu entwickeln.&nbsp;</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
 										<img class="background-image" alt="Jeroen van Beele" src="img/JeroenVanBeele.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
@@ -1457,26 +1492,6 @@
 									<h2>William Ismael<br></h2>
 									<span class="sub">Installationen und Software-Entwickler</span>
 									<p>William schreibt Software und nutzt Sensoren, Kameras, Sound, Projectoren und baut Strukturen um immersive Performances und interaktive Audiovisuelle Installationen zu erschaffen.</p>
-								</div>
-							</div>
-						</div><div class="col-md-6 col-sm-12">
-							<div class="speaker-with-bio">
-								<div class="speaker">
-									<div class="image-holder">
-										<img class="background-image" alt="Andrew Holway" src="img/AndrewHolway.jpg">
-										<div class="hover-state text-center preserve3d">
-											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/otternetworks"><i class="icon social_twitter"></i></a>
-												<a target="default" href="https://de.linkedin.com/in/andrewholway"><i class="icon social_linkedin"></i></a>
-											</div>
-										</div>
-									</div>
-								</div>
-		
-								<div class="speaker-description">
-									<h2>Andrew Holway<br></h2>
-									<span class="sub">Gründer Otter Networks and SELinux-Experte</span>
-									<p>Andrew hat Netzwerkarchitekturen für "High Performance Computing" (HPC) und Storage-Cluster am CERN aber auch für kommerzielle Clouds auf AWS entwickelt. Bei seiner Firma Otter Networks geht es darum Risiken in Cloudsystemen zu identifizieren und Lösungen zu entwickeln.&nbsp;</p>
 								</div>
 							</div>
 						</div></div>
