--- a/index.html
+++ b/index.html
@@ -425,11 +425,11 @@
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
-										<img class="background-image" alt="Jimmie P Rodgers" src="img/JimmiePRodgers.jpg">
+										<img class="background-image" alt="Jimmie P. Rodgers" src="img/JimmiePRodgers.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/jprodgers"><i class="icon social_twitter"></i></a>
-												
+												<a target="default" href="https://twitter.com/maltman23"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://www.linkedin.com/pub/mitch-altman/1/493/736"><i class="icon social_linkedin"></i></a>
 											</div>
 										</div>
 									</div>
@@ -457,7 +457,7 @@
 		
 								<div class="speaker-description">
 									<h2>Mitch Altman<br></h2>
-									<span class="sub">Open Hardware Maker</span>
+									<span class="sub"><span>Open Hardware Maker</span></span>
 									<p>Erfinder von TV-B-Gone, Mitgründer des San Francisco Hackerspaces Noisebridge.</p>
 								</div>
 							</div>
