--- a/index.html
+++ b/index.html
@@ -345,26 +345,6 @@
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
-										<img class="background-image" alt="Martin Breuer" src="img/MartinBreuer.jpg">
-										<div class="hover-state text-center preserve3d">
-											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/kautzz/"><i class="icon social_twitter"></i></a>
-												<a target="default" href="https://de.linkedin.com/pub/martin-breuer/b0/379/247"><i class="icon social_linkedin"></i></a>
-											</div>
-										</div>
-									</div>
-								</div>
-		
-								<div class="speaker-description">
-									<h2>Martin Breuer<br></h2>
-									<span class="sub">Plants &amp; Machines</span>
-									<p>Martin is the founder of "Plants &amp; Machines", a project to develop aquaponic robotic ecosystems. It brings together his interest in software development, micro controller, rapid prototyping, CAD and space. Martin studied Master of Science Architecture in Weimar.</p>
-								</div>
-							</div>
-						</div><div class="col-md-6 col-sm-12">
-							<div class="speaker-with-bio">
-								<div class="speaker">
-									<div class="image-holder">
 										<img class="background-image" alt="Georg Fritzsche" src="img/GeorgFritzsche.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
@@ -379,6 +359,26 @@
 									<h2>Georg Fritzsche<br></h2>
 									<span class="sub">Mozilla Firefox-Ingenieur</span>
 									<p>Georg ist ein Mozilla Platform-Ingenieur der an Firefox für Desktops arbeitet. Georg lebt in Berlin. Er ist aktiv in der OptenTech Community und unterstützt Projekte wie den Afrika Hacktrip.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Martin Breuer" src="img/MartinBreuer.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/kautzz/"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/pub/martin-breuer/b0/379/247"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Martin Breuer<br></h2>
+									<span class="sub">Plants &amp; Machines</span>
+									<p>Martin ist der Gründer von "Plants &amp; Machines", einem Projekt für aquaponische Roboter-Ökosysteme. Dabei kommt er sein Interesse an der Software-Entwicklung, Mikrocontrollern, Rapid Prototyping, CAD und Raumsystemen zusammen. Martin studierte Master of Science und Architektur in Weimar.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -428,8 +428,8 @@
 										<img class="background-image" alt="Jimmie P. Rodgers" src="img/JimmiePRodgers.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/maltman23"><i class="icon social_twitter"></i></a>
-												<a target="default" href="https://www.linkedin.com/pub/mitch-altman/1/493/736"><i class="icon social_linkedin"></i></a>
+												<a target="default" href="https://twitter.com/jprodgers"><i class="icon social_twitter"></i></a>
+												
 											</div>
 										</div>
 									</div>
@@ -477,8 +477,8 @@
 		
 								<div class="speaker-description">
 									<h2>Jehan Pagès<br></h2>
-									<span class="sub">LILA Libreart</span>
-									<p>Jehan is a software developer for GIMP and other Libre Graphics applications and a maker of the 2D animation movie project ZeMarmot. The film is entirely made with Free Software. Jehan spent years traveling the world alone later with his partner Aryeom. Their travels are inspirational of ZeMarmot's story.<br></p>
+									<span class="sub">Software-Entwickler LILA Libreart</span>
+									<p>Jehan ist Entwickler für GIMP und andere Graphik-Programme. Er erstellt 2D-Animation für das Filmprojekt ZeMarmot komplett mit Freier Software. Jehan reiste mehrere Jahre durch die Welt, insbesondere Asien und später mit seiner Partnerin Aryeom. Ihre Reisen inspirieren die Geschichte von ZeMarmot.<br></p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -498,7 +498,7 @@
 								<div class="speaker-description">
 									<h2>Aryeom Han</h2>
 									<span class="sub">Animation Studio Girin</span>
-									<p>Aryeom is a Korean animation film director and artist. Her first co-directed animation “Grandma Ocean” got screened in numerous festivals and won 2 prices. She is now an artist in residency in the association LILA in Paris, and is working on her own animation studio Girin. Also she is an awesome user of GIMP.</p>
+									<p>Aryeom ist eine koreanische Animationsfilmregisseurin und Künstlerin. Ihre erste Co-Regie übernahm sie mit der Animation "Grandma Ocean", das in zahlreichen Festivals gezeigt wurde und Preise gewann. Sie ist Künstlerin "in Residence" im Klub LILA in Paris und arbeitet an ihrem Studio Girin.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -620,7 +620,7 @@
 								<div class="speaker-description">
 									<h2>André Gaul<br></h2>
 									<span class="sub">Freifunk</span>
-									<p>André is a community network enthusiast and contributes to Berlin's Freifunk network. After studying mathematics and computer science, he obtained his PhD in mathematics in 2014. Apart from Freifunk, André currently builds tools for advancing open access in academia.</p>
+									<p>André ist ein Community-Netzwerk-Enthusiast und trägt zum Berliner Freifunk-Netzwerk bei. Nach dem Studium der Mathematik und Informatik, promovierte er 2014. André baut Tools für die Förderung der Open-Access in der Wissenschaft.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -875,9 +875,7 @@
 								<div class="speaker-description">
 									<h2>Lars Zimmermann<br></h2>
 									<span class="sub">OPENiT Agency</span>
-									<p>Artist, Open Source Economist &amp; Open Source Consultant, City Hacker 
-		&amp; Author focusing on Hardware &amp; Design. Pushing Open Source for
-		 Circular Economy since 2009.</p>
+									<p>Künstler, Open Source Ökonom, Autor, Sprecher, City Hacker &amp; Gründer. Lars entwickelt Projekte haelt Vortraeg zu Open Source Hardware &amp; Design Business Models, Kreislaufwirtschaft/Nachhaltigkeit.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -897,7 +895,7 @@
 								<div class="speaker-description">
 									<h2>Sam Muirhead<br></h2>
 									<span class="sub">Camera Libre</span>
-									<p>A Free/Libre activist and Open Source consultant, Sam promotes the commons through video, writing and experimentation.&nbsp;</p>
+									<p>Sam Muirhead ist ein Free / Libre Open Source-Aktivist und Berater. Sam fördert die Allmende indem er Open-Source-Videos macht, unter freien Lizenzen schreibt und mit offenen Systemen experimentiert.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -1416,7 +1414,7 @@
 								<div class="speaker-description">
 									<h2>Jan Suhr<br></h2>
 									<span class="sub">Gründer Nitrokey</span>
-									<p>Jan beschäftigt sich seit mehr als 10 Jahren intensiv mit dem Thema Open Hardware und Kryptographie. Sein Projekt und Startup Nitrokey basiert auf Open Hardware und Open Source-Software-Verschlüsselung. Jan arbeitet als Software-Consultant bei internationalen Firmen in Deutschland und Singapur.</p>
+									<p>Jan beschäftigt sich seit mehr als 10 Jahren intensiv mit dem Thema Open Hardware und Kryptographie. Sein Projekt und Startup Nitrokey basiert auf Open Hardware und Open Source-Software-Verschlüsselung. Jan arbeitet als Consultant bei internationalen Firmen in Deutschland und Singapur.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -1491,7 +1489,7 @@
 								<div class="speaker-description">
 									<h2>William Ismael<br></h2>
 									<span class="sub">Installationen und Software-Entwickler</span>
-									<p>William schreibt Software und nutzt Sensoren, Kameras, Sound, Projectoren und baut Strukturen um immersive Performances und interaktive Audiovisuelle Installationen zu erschaffen.</p>
+									<p>William schreibt Software und nutzt Sensoren, Kameras, Sound, Projektoren und baut Strukturen um immersive Performances und interaktive audiovisuelle Installationen zu erschaffen.</p>
 								</div>
 							</div>
 						</div></div>
