--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 								<div class="speaker-description">
 									<h2>Luca Comparini</h2>
 									<span class="sub">Ecosystem Development at IBM</span>
-									<p>Luca Comparini's Karriere begann als DNS-Administrator bei Fastweb. 2007 holte ihn IBM als Evangelisten für IT-Infrastruktur-Technologien zu sich. Seit 2014 unterstützt er unabhängige Partner bei der Einführung von Linux-basierten Lösungen: Power Systems, Virtualisierung, Automatisierung und IaaS Cloud-Deployment.</p>
+									<p>Luca's Karriere begann als DNS-Administrator bei Fastweb. 2007 holte ihn IBM als Evangelisten für IT-Infrastruktur-Technologien zu sich. Seit 2014 unterstützt er unabhängige Partner bei der Einführung von Linux-basierten Lösungen: Power Systems, Virtualisierung, Automatisierung und IaaS Cloud-Deployment.</p>
 								</div>
 							</div>
 						</div>
@@ -478,7 +478,7 @@
 								<div class="speaker-description">
 									<h2>Jehan Pagès<br></h2>
 									<span class="sub">Software-Entwickler LILA Libreart</span>
-									<p>Jehan ist Entwickler für GIMP und andere Graphik-Programme. Er erstellt 2D-Animation für das Filmprojekt ZeMarmot komplett mit Freier Software. Jehan reiste mehrere Jahre durch die Welt, insbesondere Asien und später mit seiner Partnerin Aryeom. Ihre Reisen inspirieren die Geschichte von ZeMarmot.<br></p>
+									<p>Jehan ist Entwickler für GIMP und andere Grafik-Programme. Er erstellt 2D-Animation für das Filmprojekt ZeMarmot komplett mit Freier Software. Jehan reiste mehrere Jahre durch die Welt, insbesondere Asien und später mit seiner Partnerin Aryeom. Ihre Reisen inspirieren die Geschichte von ZeMarmot.<br></p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -620,7 +620,7 @@
 								<div class="speaker-description">
 									<h2>André Gaul<br></h2>
 									<span class="sub">Freifunk</span>
-									<p>André ist ein Community-Netzwerk-Enthusiast und trägt zum Berliner Freifunk-Netzwerk bei. Nach dem Studium der Mathematik und Informatik, promovierte er 2014. André baut Tools für die Förderung der Open-Access in der Wissenschaft.</p>
+									<p>André ist ein Community-Netzwerk-Enthusiast und trägt zum Berliner Freifunk-Netzwerk bei. Nach dem Studium der Mathematik und Informatik, promovierte er 2014. André baut Tools für die Förderung von Open-Access in der Wissenschaft.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -1068,7 +1068,7 @@
 								</div>
 		
 								<div class="speaker-description">
-									<h2>Great Doci<br></h2>
+									<h2>Greta Doci<br></h2>
 									<span class="sub">Wikipedia Community</span>
 									<p>Greta studiert Informatik und arbeitet als Entwicklerin. Sie ist Mitglied des Hackerspaces Open Labs Albanien und eine Organisatorin der Open Source Conference Albania. Sie beschäftigt sich mit freiem Wissen in der Wikipedia. Sie liebt Wandern, Reisen und Schokolade :)</p>
 								</div>
