--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		</script>
     </head>
 
+
     <body class="no-loader">
     
     	<div class="loader">
@@ -1333,7 +1334,7 @@
 								<div class="speaker-description">
 									<h2>Johannes Baiter<br></h2>
 									<span class="sub">DIY-Digitalisierung von Büchern</span>
-									<p>Sebastian is FOSS-Enthusiast mit einem Abschluss in Kunstgeschichte. Sein erster Programmierauftrag war in einer Bibliothek und -keine Überraschung- ihm fiel ein Buch über DIY-Digitalisierung von Büchern in die Hand. Er verbrachte die letzten zwei Jahre damit Digitalisierungs-Software zu schreiben.</p>
+									<p>Johannes is FOSS-Enthusiast mit einem Abschluss in Kunstgeschichte. Sein erster Programmierauftrag war in einer Bibliothek und -keine Überraschung- ihm fiel ein Buch über DIY-Digitalisierung von Büchern in die Hand. Er verbrachte die letzten zwei Jahre damit Digitalisierungs-Software zu schreiben.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
