--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 		</script>
     </head>
 
-
     <body class="no-loader">
     
     	<div class="loader">
@@ -1470,6 +1469,26 @@
 									<h2>Jeroen van Beele<br></h2>
 									<span class="sub">Projekt Zukunftsmöbel </span>
 									<p>Jeroen ist Mathematiker und Business Intelligence-Experte aus den Niederlanden. Sein Projekt "Search &amp; Share" integriert Initiativen des Sharings und beschäftigt sich mit der Balance natürlicher Systeme.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Dominik	Wind" src="img/DominikWind.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/dominikwind"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/in/dominikwind/"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2><span>Dominik&nbsp;Wind</span><br></h2>
+									<span class="sub">Open State</span>
+									<p>Als strategischer Designer und Berater ist es das Ziel von Dominik eine lebenswerte Zukunft zu entwickeln. Seit 2009 hat er zu diesem Thema mehr als 100 Workshops gemacht. Er liebt die unberührte Natur, Utopie und wirklich schnelle Bikes.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
