--- a/index.html
+++ b/index.html
@@ -1495,26 +1495,6 @@
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
-										<img class="background-image" alt="Andrew Holway" src="img/AndrewHolway.jpg">
-										<div class="hover-state text-center preserve3d">
-											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/otternetworks"><i class="icon social_twitter"></i></a>
-												<a target="default" href="https://de.linkedin.com/in/andrewholway"><i class="icon social_linkedin"></i></a>
-											</div>
-										</div>
-									</div>
-								</div>
-		
-								<div class="speaker-description">
-									<h2>Andrew Holway<br></h2>
-									<span class="sub">Gründer Otter Networks and SELinux-Experte</span>
-									<p>Andrew hat Netzwerkarchitekturen für "High Performance Computing" (HPC) und Storage-Cluster am CERN aber auch für kommerzielle Clouds auf AWS entwickelt. Bei seiner Firma Otter Networks geht es darum Risiken in Cloudsystemen zu identifizieren und Lösungen zu entwickeln.&nbsp;</p>
-								</div>
-							</div>
-						</div><div class="col-md-6 col-sm-12">
-							<div class="speaker-with-bio">
-								<div class="speaker">
-									<div class="image-holder">
 										<img class="background-image" alt="William Ismael" src="img/WilliamIsmael.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
@@ -1529,6 +1509,46 @@
 									<h2>William Ismael<br></h2>
 									<span class="sub">Installationen und Software-Entwickler</span>
 									<p>William schreibt Software und nutzt Sensoren, Kameras, Sound, Projektoren und baut Strukturen um immersive Performances und interaktive audiovisuelle Installationen zu erschaffen.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Alexandra Quiring-Tegeder" src="img/AlexandraQuiring-Tegeder.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/AlexeQuiring"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/pub/alexandra-quiring-tegeder/7/56/489"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Alexandra Quiring-Tegeder<br></h2>
+									<span class="sub">Kinder geben Kommandos</span>
+									<p>Arbeitet seit 15 Jahren für Unternehmen, führt eine Digital-Agentur, ist verheiratet und hat zwei Söhne im Alter von 7 und 17 Jahren. Inspiriert von „Hour of Code“ in den USA, macht sie mit "Kinder geben Kommandos" Programmier-Workshops für Schüler.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Andrew Holway" src="img/AndrewHolway.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/otternetworks"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/in/andrewholway"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Andrew Holway<br></h2>
+									<span class="sub">Gründer Otter Networks and SELinux-Experte</span>
+									<p>Andrew hat Netzwerkarchitekturen für "High Performance Computing" (HPC) und Storage-Cluster am CERN aber auch für kommerzielle Clouds auf AWS entwickelt. Bei seiner Firma Otter Networks geht es darum Risiken in Cloudsystemen zu identifizieren und Lösungen zu entwickeln.&nbsp;</p>
 								</div>
 							</div>
 						</div></div>
