--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		</script>
     </head>
 
+
     <body class="no-loader">
     
     	<div class="loader">
@@ -718,7 +719,7 @@
 		
 								<div class="speaker-description">
 									<h2>carlo von lynX<br></h2>
-									<span class="sub">Wau Holland Stiftung</span>
+									<span class="sub">#youbroketheinternet</span>
 									<p>Dem IRC das /me beigebracht; STERN, ZEIT, SPIEGEL den Start ins Web erleichtert und Certificate Patrol für Firefox angestoßen. Carlo's Chat PSYC lebt heute in secushare's verteiltem sozialem Netzwerkprojekt. Zur Lösung des Überwachungsproblems feilt er an Gesetzgebung und arbeitet an #youbroketheinternet.</p>
 								</div>
 							</div>
