--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <meta name="twitter:creator" content="@opntec">
         <meta name="twitter:image" content="">
 
-        <link rel="shortcut icon" href="ots.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="OpenTechSummit.ico" type="image/x-icon" />
 
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
